--- a/Spreadsheet7.html
+++ b/Spreadsheet7.html
@@ -123,10 +123,13 @@
         var data2WithHeader =[];
         var inputArray= [];
         var states = ["STATE0","STATE1","STATE2","STATE3"];
-        var nStates = 6;
+        var nStates = 5;
         var curStateIx = 0;
         var condLength =8;
         var msgLength = 8;
+
+        var nLoop =100;
+        //determine how many steps to loop if loop button pressed
 
 
 
@@ -208,6 +211,14 @@
 
         }
 
+        function loop(){
+
+             for (k=1;k<nLoop;k++) step();
+
+        }
+
+
+
         function postDetectors() {
 
             for (ix = 0; ix < nRows; ix++) {
@@ -273,7 +284,7 @@
                             matchCount++;
                            var bid = calcAndSetBid(ix);
 
-                            setState(ix,"BID");
+                            //setState(ix,"BID");
                             if (fire(bid)) {
 
                                 data2[ix][ACCEPTED] =1;
@@ -315,6 +326,12 @@
                                 var fitness =  data2[r][FITNESS];
                                 fitness += pay;
                                 data2[r][FITNESS]  = rounded (fitness,6);
+                                fitness =  data2[ix][FITNESS];
+                                fitness -= pay;
+                                if (fitness < 0) fitness =0;//necessary ?
+                                data2[ix][FITNESS]  = rounded (fitness,6);
+
+
 
                             }
                             //setState(ix,"BID");
@@ -351,19 +368,27 @@
 
         }
 
+        function zeroStates(ix){
+             data2[ix][BID0] = 0;
+             data2[ix][ACCEPTED] =0;
+             data2[ix][MATCHES] =0;
+        }
+
         function repost(){
 
              for(ix =0;ix<nRows;ix++){
 
-                 if( hasMsgs(ix)){
+                 if( hasMsg(ix)){
                      if ((rePostDetectorMessages && (data2[ix][TYPE] === "D" )   ) || isAccepted(ix))
                      {setState(ix,"POSTED")}
-                     else {setState(ix,"NOT POSTED")}
+                     else {setState(ix,"-")}
 
 
 
 
                  }
+
+                 zeroStates(ix); //inactive
              }
 
 
@@ -860,6 +885,7 @@ function findCond(ix){
 <button id="button1" type="button" onclick="updateSheet()">Update Test</button>
 <button id="export-file" >Save JSON</button>
 <button id="step" type="button" onclick="step()">Step</button>
+<button id="loop" type="button" onclick="loop()">Loop</button>
 <div id="loadJSON">Open JSON
     <input type="file" name="inputfile" id="inputfile">
 </div>>
